--- a/smart_mirror/src/index.css
+++ b/smart_mirror/src/index.css
@@ -1,13 +1,77 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: sawasdee;
+  background-color: black;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  background-color: black;
+  height: 100vh;
+  width: 100vw;
+  float: left;
+}
+
+.Clock {
+  background-color: black;
+  color: white;
+  font-size: 6em;
+}
+
+.row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.Row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.Date {
+  background-color: black;
+  color: white;
+  font-size: 3em;
+  margin-left: 2em;
+}
+
+.Temperature {
+  background-color: black;
+  color: white;
+  font-size: 3em;
+}
+
+html {
+  overflow: scroll;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar {
+  width: 0px;  /* remove scrollbar space */
+  background: transparent;  /* optional: just make scrollbar invisible */
+}
+
+.Buddy, h2 {
+  margin: 0;
+  transition: all 1250ms ease;
+  box-sizing: border-box;
+}
+
+.status {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 8px;
+  height: 8px;
+  transition: all 1250ms ease;
+  margin-right: 4px;
+  margin-bottom: 2px;
+  border-radius: 50%;
+  background-color: hsl(100, 50%, 50%);
+}
+
+.offline {
+  background-color: hsl(0, 50%, 50%);
+}
+
+.recharts-wrapper .recharts-y-axis .recharts-cartesian-axis-ticks .recharts-cartesian-axis-tick:first-child {
+  display: none;
 }
